<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="10dip"
    android:background="#718EA4">

    <TextView
        android:id="@+id/txtusername"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/Username"
        android:textColor="#fff"
        android:layout_above="@+id/username"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textSize="20dp"
        android:typeface="normal" />

    <EditText
        android:id="@+id/username"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:inputType="text"
        android:background="#FFF"
        android:layout_above="@+id/txtpassword"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="22dp"
        android:paddingLeft="10dp" />

    <TextView
        android:id="@+id/txtpassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/Password"
        android:textColor="#fff"
        android:layout_above="@+id/password"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:inputType="textPassword"
        android:background="#fff"
        android:layout_above="@+id/login"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="19dp"
        android:paddingLeft="10dp" />

    <Button
        android:id="@+id/login"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/LoginBtn"
        android:textColor="#fff"
        android:background="#000"
        android:layout_alignTop="@+id/signup"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:textSize="17dp" />

    <Button
        android:id="@+id/signup"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/SignupBtn"
        android:textColor="#fff"
        android:background="#000"
        android:layout_centerVertical="true"
        android:layout_alignRight="@+id/password"
        android:layout_alignEnd="@+id/password"
        android:layout_marginRight="17dp"
        android:layout_marginEnd="17dp"
        android:textSize="17dp" />

    <ImageView
        android:src="@drawable/scissor"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_below="@+id/login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp" />/ >

</RelativeLayout>