<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#9B9DA0">

    <TextView
        android:id="@+id/txtwelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/Welcome"
        android:paddingTop="50dp"
        android:textSize="25sp"
        android:textColor="#fff"
        android:typeface="sans"
        android:visibility="visible" />

    <TextView
        android:id="@+id/txtuser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtwelcome"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/findBarber"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:text="@string/FindBarberBtn"
        android:background="#000"
        android:textColor="#fff"
        android:textSize="20dp"
        android:layout_below="@+id/txtuser"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/logout"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:text="@string/LogoutBtn"
        android:layout_marginBottom="48dp"
        android:background="#000"
        android:textColor="#fff"
        android:textSize="20dp"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/findBarber"
        android:layout_alignStart="@+id/findBarber" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/clientList"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/findBarber"
        android:layout_above="@+id/logout"
        android:layout_marginTop="30dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Appointment Requests"
        android:id="@+id/textView5"
        android:layout_below="@+id/findBarber"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>