<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@drawable/beach"
    android:layout_height="match_parent">



    <LinearLayout android:layout_width="fill_parent"
        android:layout_height="90dp"
        android:orientation="horizontal"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <TextView
            android:id="@+id/txtFindBarber"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:fontFamily="sans-serif-light"
            android:text="@string/FindBarber"
            android:paddingTop="30dp"
            android:paddingLeft="25dp"
            android:textSize="40dp"
            android:textColor="#fff"
            android:typeface="sans"
            android:visibility="visible"
            android:textAlignment="center" />

    </LinearLayout>

    <LinearLayout android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:layout_marginTop="35dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <LinearLayout android:layout_width="fill_parent"
            android:layout_height="70dp"
            android:orientation="horizontal"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

            <TextView
                android:id="@+id/txtPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/Price"
                android:paddingTop="30dp"
                android:paddingLeft="25dp"
                android:fontFamily="sans-serif-light"
                android:textSize="20sp"
                android:textColor="#fff"
                android:typeface="sans"
                android:visibility="visible"
                android:layout_marginTop="-15dp"
                android:layout_marginLeft="-20dp" />

            <Spinner
                android:id="@+id/price_range"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:fontFamily="sans-serif-light"
                android:background="@android:drawable/btn_dropdown"
                android:spinnerMode="dropdown"
                android:gravity="center_horizontal"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp" />

        </LinearLayout>

        <LinearLayout android:layout_width="fill_parent"
            android:layout_height="70dp"
            android:orientation="horizontal"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:layout_centerHorizontal="true"
                android:text="Day:"
                android:paddingTop="30dp"
                android:paddingLeft="25dp"
                android:textSize="20sp"
                android:textColor="#fff"
                android:typeface="sans"
                android:visibility="visible"
                android:layout_marginRight="10dp"
                android:layout_marginTop="-15dp"
                android:layout_marginLeft="-20dp" />

            <Spinner
                android:id="@+id/day_range"
                android:layout_width="fill_parent"
                android:fontFamily="sans-serif-light"
                android:layout_height="fill_parent"
                android:background="@android:drawable/btn_dropdown"
                android:spinnerMode="dropdown"
                android:gravity="center_horizontal"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp" />

        </LinearLayout>

        <LinearLayout android:layout_width="fill_parent"
            android:layout_height="70dp"
            android:orientation="horizontal"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

            <TextView
                android:id="@+id/txtTime"
                android:layout_width="106dp"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:layout_centerHorizontal="true"
                android:text="Available at:"
                android:paddingTop="20dp"
                android:paddingLeft="25dp"
                android:textSize="20sp"
                android:textColor="#fff"
                android:typeface="sans"
                android:visibility="visible"
                android:layout_marginTop="-15dp"
                android:layout_marginLeft="-20dp"
                android:singleLine="false"
                android:textAlignment="center" />

            <Spinner
                android:id="@+id/time_range"
                android:layout_width="fill_parent"
                android:fontFamily="sans-serif-light"
                android:layout_height="fill_parent"
                android:background="@android:drawable/btn_dropdown"
                android:spinnerMode="dropdown"
                android:gravity="center_horizontal"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp" />

        </LinearLayout>

        <Button
            android:id="@+id/searchbtn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/SearchBtn"
            android:background="#000"
            android:textColor="#fff"
            android:textSize="20dp"
            android:layout_below="@+id/Search"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal|bottom"
            android:fontFamily="sans-serif-light"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp" />

    </LinearLayout>

</LinearLayout>